--- a/.github/workflows/main_chickenapp.yml
+++ b/.github/workflows/main_chickenapp.yml
@@ -43,6 +43,12 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+    - name: Stop all running containers 
+      run: docker stop $(docker ps -q)
+
+    - name: Clean previous images, containers and volumes
+      run: docker system prune -af
+      
     - name: Deploy to Azure Web App
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
@@ -52,6 +58,3 @@ jobs:
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_1f9830718ad247a2b7daa54585cdb13a }}
         images: 'mychickenapp.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_6b5c2af2cbdc4105a568ee19cd8e8d7f }}/chicken:${{ github.sha }}'
     
-    - name: Clean previous images, containers and volumes
-      run: docker system prune -af
-
